# TRF

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.md  config.h.in  configure  configure.ac  configure.scan  history.txt  tr30dat.c  tr30dat.h  trf.c  trfrun.h
.github/workflows/: build.yml
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  tr30dat.c  tr30dat.h  trf.c  trfclean.c  trfclean.h  trfrun.c  trfrun.h
t/: callgrind.out.16781  callgrind.out.2092284  callgrind.out.2092604  callgrind.out.23640  callgrind.out.2392782  callgrind.out.2395390  callgrind.out.26960  callgrind.out.27714  diff_cn.fasta  diff_cn.fasta.out  small_test.fasta  small_test.fasta.out
win32-gui/: TRF.HLP  dbgcon.h  dirdlg.h  resource.h  tr30dat.c  tr30dat.h  trf.RES  trf.c  trf.cnt  trf.h  trf.ini  trf.mak  trf.rc  trfclean.h  trfcomm.h  trfdlg.h  trffile.h  trfini.h  trfrun.h
